--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@ See <a href="https://github.com/pirate/security-growler/blob/master/menubar.sh">
 <p><img src="http://pirate.github.io/security-growler/screenshots/menubar_3.PNG" width="100%"></p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/pirate">pirate</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>This project is maintained by <a href="https://nicksweeting.com">Nick Sweeting</a> (<a href="https://github.com/pirate">@pirate</a>)</p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
