--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 
         <ul>
-          <li><a href="https://github.com/pirate/security-growler/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/pirate/security-growler/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/pirate/security-growler">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/pirate/security-growler/raw/master/Security%20Growler.app.zip">Dark Mode <strong>App</strong></a></li>
+          <li><a href="https://github.com/pirate/security-growler/raw/master/Security%20Growler%20Light.app.zip">Light Mode <strong>App</strong></a></li>
+          <li><a href="https://github.com/pirate/security-growler">View Source <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -47,7 +47,7 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install:</h2>
 
 <ol>
-<li>Download and run <a href="https://github.com/pirate/security-growler/raw/master/Security%20Growler.app.zip">Security Growler.app &gt;&gt;</a> (dark mode)</li>
+<li>Download and run <a href="https://github.com/pirate/security-growler/raw/master/Security%20Growler.app.zip"><button>Security Growler.app &gt;&gt;</button></a> (dark mode)</li>
 <li>Click on the menubar icon once to start detecting events.</li>
 </ol>
 
