make img urls support https

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <p>This menubar app for OS X will notify you via Notifcation Center (or Growl) when various security events occur (<a href="https://github.com/pirate/security-growler#documentation">see list</a>).</p>
 
-<p><img src="http://pirate.github.io/security-growler/screenshots/portscan_event.PNG" width="45%">
-<img src="http://pirate.github.io/security-growler/screenshots/vnc_event.PNG" width="45%"></p>
+<p><img src="//pirate.github.io/security-growler/screenshots/portscan_event.PNG" width="45%">
+<img src="//pirate.github.io/security-growler/screenshots/vnc_event.PNG" width="45%"></p>
 
 <p>It's very useful if you're paranoid about people trying to hack into your computer.  Or... if you simply like having information about people using your computer's resources.</p>
 
@@ -51,8 +51,8 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <li>Click on the menubar icon once to start detecting events.</li>
 </ol>
 
-<p><img src="http://pirate.github.io/security-growler/screenshots/menubar_2.PNG" width="45%">
-<img src="http://pirate.github.io/security-growler/screenshots/menubar_1.PNG" width="45%"></p>
+<p><img src="//pirate.github.io/security-growler/screenshots/menubar_2.PNG" width="45%">
+<img src="//pirate.github.io/security-growler/screenshots/menubar_1.PNG" width="45%"></p>
 
 <p>Download <a href="https://github.com/pirate/security-growler/raw/master/Security%20Growler%20Light.app.zip">Security Growler Light.app</a> if you don't use OS X Dark Mode.
 If you prefer <a href="http://growl.info">Growl</a> to the OS X Notification Center, run <code>sudo easy_install gntp</code> in Terminal and relaunch to switch.</p>
@@ -62,23 +62,23 @@ If you prefer <a href="http://growl.info">Growl</a> to the OS X Notification Cen
 
 <p><strong>Alert you of attempted and succesfull SSH logins:</strong></p>
 
-<p><img src="http://pirate.github.io/security-growler/screenshots/ssh_fail_event.PNG" width="40%">
-<img src="http://pirate.github.io/security-growler/screenshots/ssh_key_event.PNG" width="40%"></p>
+<p><img src="//pirate.github.io/security-growler/screenshots/ssh_fail_event.PNG" width="40%">
+<img src="//pirate.github.io/security-growler/screenshots/ssh_key_event.PNG" width="40%"></p>
 
 <p><strong>Notify you of incoming &amp; outgoing TCP connections: FTP, VNC, SMB, MySQL, etc.:</strong></p>
 
 <p>(using <a href="https://github.com/pirate/security-growler#background">less RAM</a> than Little Snitch)  </p>
 
-<p><img src="http://pirate.github.io/security-growler/screenshots/vnc_event.PNG" width="40%">
-<img src="http://pirate.github.io/security-growler/screenshots/connection_event.PNG" width="40%"></p>
+<p><img src="//pirate.github.io/security-growler/screenshots/vnc_event.PNG" width="40%">
+<img src="//pirate.github.io/security-growler/screenshots/connection_event.PNG" width="40%"></p>
 
 <p><strong>Notify you whenever a command is run with <code>sudo</code>:</strong></p>
 
-<p><img src="http://pirate.github.io/security-growler/screenshots/sudo_context.PNG" height="350px"></p>
+<p><img src="//pirate.github.io/security-growler/screenshots/sudo_context.PNG" height="350px"></p>
 
 <p><strong>Let you know when you're being portscanned:</strong></p>
 
-<p><img src="http://pirate.github.io/security-growler/screenshots/portscan_context.PNG" height="350px"></p>
+<p><img src="//pirate.github.io/security-growler/screenshots/portscan_context.PNG" height="350px"></p>
 
 <p><a href="https://github.com/pirate/security-growler/tree/gh-pages/screenshots">More Screenshots...</a></p>
 
@@ -115,7 +115,7 @@ If you prefer <a href="http://growl.info">Growl</a> to the OS X Notification Cen
 <p>A similar project written by <a href="https://github.com/benjojo">@benjojo</a> is available for Linux users: <a href="https://github.com/benjojo/PushAlotAuth">PushAlotAuth</a>, it uses the <a href="https://pushalot.com/">PushALot</a> push-notification platform.</p>
 
 
-<p><img src="http://pirate.github.io/security-growler/screenshots/menubar_3.PNG" width="100%"></p>
+<p><img src="//pirate.github.io/security-growler/screenshots/menubar_3.PNG" width="100%"></p>
       </section>
       <footer>
         <p>By <a href="https://nicksweeting.com">Nick Sweeting</a> (<a href="https://github.com/pirate">@pirate</a>)</p>
