--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a id="security-growler-----" class="anchor" href="#security-growler-----" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://pirate.github.io/security-growler">Security Growler</a>  <img src="https://pirate.github.io/security-growler/alert.png" height="20px">  <a href="https://github.com/pirate/security-growler"><img src="https://img.shields.io/github/stars/pirate/security-growler.svg" alt="Build Status"></a> <a href="https://twitter.com/thesquashSH"><img src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social" alt="Twitter URL"></a>
 </h1>
 
-<p>This menubar app for OS X will notify you via Notifcation Center (or Growl) when various security events occur (<a href="https://github.com/pirate/security-growler#documentation">see list</a>).</p>
+<p>This menubar app for OS X will notify you via Notification Center (or Growl) when various security events occur (<a href="https://github.com/pirate/security-growler#documentation">see list</a>).</p>
 
 <p><img src="//pirate.github.io/security-growler/screenshots/portscan_event.PNG" width="45%">
 <img src="//pirate.github.io/security-growler/screenshots/vnc_event.PNG" width="45%"></p>
